# gpu-jpeg2k

./: .gitignore  README.md
gpu_jpeg2k/: .cproject  .project  CMakeLists.txt  README.build  bsq.config  copyright.txt  decoder.c  encoder.c  j2k_main.doxyfile  jp2_decoder.c  lossless.config  lossy.config  test.cu
gpu_jpeg2k/CMake/: FindFreeImage.cmake
gpu_jpeg2k/config/: CMakeLists.txt  arguments.c  arguments.h  help.h  ini.c  ini.h  init_device.c  init_device.h  parameters.c  parameters.h
gpu_jpeg2k/config_files/: default.config  hyperspectral_lossless.config  hyperspectral_lossy.config  lossless.config  lossy.config
gpu_jpeg2k/dwt/: CMakeLists.txt  dwt.cu  dwt.h  fwt.cu  fwt.h  fwt_1d.cu  fwt_1d.h  fwt_new.cu  fwt_new.h  iwt.cu  iwt.h  iwt_1d.cu  iwt_1d.h  iwt_new.cu  iwt_new.h  kernel.cu  kernel.h
gpu_jpeg2k/file_access/: CMakeLists.txt  file_access.c  file_access.h
gpu_jpeg2k/file_format/: CMakeLists.txt  README  boxes.c  boxes.h
gpu_jpeg2k/klt/: CMakeLists.txt  adjust.cu  adjust.h  analysis.cu  analysis.h  blocks.c  blocks.h  calc_cov.cu  calc_cov.h  calc_cov_mat.cu  calc_cov_mat.h  gs.cu  gs.h  klt.cu  klt.h  klt_klt_gpu.diff  mct_transform.cu  mct_transform.h  mean_adjust_data.cu  mean_adjust_data.h  reduce.cu  reduce.h  shift.cu  shift.h  test_calc_cov.cu  test_calc_cov_mat.cu
gpu_jpeg2k/misc/: CMakeLists.txt  cuda_errors.cu  cuda_errors.h  memory_management.cu  memory_management.cuh  my_malloc.c  my_malloc.h
gpu_jpeg2k/multi_gpu/: CMakeLists.txt  entropy_coding.c  entropy_coding.h  entropy_coding_task.c  entropy_coding_task.h
gpu_jpeg2k/my_common/: CMakeLists.txt  my_common.c  my_common.h
gpu_jpeg2k/preprocessing/: CMakeLists.txt  TODO  mct.c  mct.h  preprocess.cu  preprocess_gpu.cu  preprocess_gpu.h  preprocessing_constants.cuh
gpu_jpeg2k/print_info/: print_info.c  print_info.h
gpu_jpeg2k/results/: change_format.awk  enc_lossless.sh  enc_lossy.sh  parser.awk  results_kakadu_onecore.txt
gpu_jpeg2k/scheduler/: TODO.txt  _CMakeLists.txt  hierarchy.c  hierarchy.h  make.sh  read_file.c  read_file.h  test.c  test.h  test_cpu.c  test_cuda.cu  test_models.c  test_models.h  vector.c  vector.h  vector_cpu.c  vector_cuda.cu  vector_models.c  vector_models.h
gpu_jpeg2k/scripts/: clean.sh
gpu_jpeg2k/test/: dbg_fiwt_1d.cu  dbg_fiwt_1d.h  dbg_fwt_1d.cu  dbg_fwt_1d.h  dbg_iwt_1d.cu  dbg_iwt_1d.h  dbg_wt.cu  dbg_wt.h
gpu_jpeg2k/tier1/: CMakeLists.txt  dequantizer.cu  dequantizer.h  quantization.c  quantization.h  quantizer.cu  quantizer.h  rate-distortion.cu  rate-distortion.h
gpu_jpeg2k/tier2/: CMakeLists.txt  backup.c  backup_tag_tree.c  buffer.c  buffer.h  codestream.c  codestream.h  codestream_mct.c  codestream_mct.h  dbg_tier2.c  dbg_tier2.h  markers.h  tag_tree.h  tag_tree_decode.c  tag_tree_encode.c  (+3 more)
(+342 files in other folders)
